cyclonedx-bom/src/specs/v1_3/snapshots/cyclonedx_bom__specs__v1_3__dependency__test__it_should_write_xml_dependencies_with_no_children.snap
---
source: cyclonedx-bom/src/specs/v1_3/dependency.rs
assertion_line: 257
expression: xml_output

---
<?xml version="1.0" encoding="utf-8"?>
<dependencies>
  <dependency ref="dependency" />
</dependencies>
