cyclonedx-bom/src/specs/v1_3/snapshots/cyclonedx_bom__specs__v1_3__dependency__test__it_should_write_xml_empty_dependencies.snap
---
source: cyclonedx-bom/src/specs/v1_3/dependency.rs
assertion_line: 248
expression: xml_output

---
<?xml version="1.0" encoding="utf-8"?>
<dependencies />
