cyclonedx-bom/src/specs/v1_3/snapshots/cyclonedx_bom__specs__v1_3__dependency__test__it_should_write_xml_full.snap
---
source: cyclonedx-bom/src/specs/v1_3/dependency.rs
assertion_line: 242
expression: xml_output

---
<?xml version="1.0" encoding="utf-8"?>
<dependencies>
  <dependency ref="ref">
    <dependency ref="depends on" />
  </dependency>
</dependencies>
